objects/zqu__ProductRatePlanChargeTier__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__EndingUnit__c</fullName>
        <label>EndingUnit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__IsOveragePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOveragePrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__PriceFormat__c</fullName>
        <description>Flat Fee vs. Per Unit</description>
        <inlineHelpText>Flat Fee vs. Per Unit</inlineHelpText>
        <label>Price Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeId__c</fullName>
        <label>ProductRatePlanChargeId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Product RatePlan Charge Tier</relationshipLabel>
        <relationshipName>Product_RatePlan_Charge_Tier</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__StartingUnit__c</fullName>
        <label>StartingUnit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Tier__c</fullName>
        <label>Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ZuoraId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product RatePlan Charge Tier</label>
    <nameField>
        <label>Tier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product RatePlan Charge Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>